--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -2,23 +2,9 @@
 
 <header class="hero-unit" id="banner">
   <div class="container">
-    <div id="ytapiplayer">
-      You need Flash player 8+ and JavaScript enabled to view this video.
-    </div>
-    <h1>'Allo, 'Allo!</h1>
-    <p class="lead">Kick-start your next web app with Angular Fullstack</p>
-    <img src="assets/images/yeoman.png" alt="I'm Yeoman">
+    <youtube-video video-id="testVideo"></youtube-video>
   </div>
 </header>
-
-<script type="text/javascript">
-
-  var params = { allowScriptAccess: "always" };
-  var atts = { id: "myytplayer" };
-  swfobject.embedSWF("http://www.youtube.com/v/VIDEO_ID?enablejsapi=1&playerapiid=ytplayer&version=3",
-    "ytapiplayer", "425", "356", "8", null, null, params, atts);
-
-</script>
 
 <div class="container">
   <div class="row">
