--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -2,16 +2,16 @@
 
 <header class="hero-unit" id="banner">
   <div class="container">
-    <youtube-video video-id="testVideo"></youtube-video>
+    <youtube-video song-id="testSong"></youtube-song>
   </div>
 </header>
 
 <div class="container">
   <div class="row">
     <div class="col-lg-12">
-      <h1 class="page-header">Videos</h1>
-      <ul class="nav nav-tabs nav-stacked col-md-4 col-lg-4 col-sm-6" ng-repeat="video in videoList">
-        <li><a href="#" tooltip="{{video.info}}">{{video.name}}<button type="button" class="close" ng-click="deleteVideo(video)">&times;</button></a></li>
+      <h1 class="page-header">Songs</h1>
+      <ul class="nav nav-tabs nav-stacked col-md-4 col-lg-4 col-sm-6" ng-repeat="song in songList">
+        <li><a href="#" tooltip="{{song.info}}">{{song.name}}<button type="button" class="close" ng-click="deleteSong(song)">&times;</button></a></li>
       </ul>
     </div>
   </div>
@@ -19,9 +19,9 @@
   <form class="thing-form">
     <label>Syncs in realtime across clients</label>
     <p class="input-group">
-      <input type="text" class="form-control" placeholder="Add a new video here." ng-model="newVideo">
+      <input type="text" class="form-control" placeholder="Add a new song here." ng-model="newSong">
       <span class="input-group-btn">
-        <button type="submit" class="btn btn-primary" ng-click="addVideo()">Add New</button>
+        <button type="submit" class="btn btn-primary" ng-click="addSong()">Add New</button>
       </span>
     </p>
   </form>
@@ -29,8 +29,10 @@
 
 <footer class="footer">
   <div class="container">
+      <!--
       <p>Angular Fullstack v2.0.13 |
         <a href="https://twitter.com/tyhenkel">@tyhenkel</a> |
          <a href="https://github.com/DaftMonk/generator-angular-fullstack/issues?state=open">Issues</a></p>
+      -->
   </div>
 </footer>
