--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -10,9 +10,21 @@
   <div class="row">
     <div class="col-lg-12">
       <h1 class="page-header">Songs</h1>
+      <div infinite-scroll='songList.loadMore()' infinite-scroll-distance='1'>
+        <div ng-repeat='song in songList'>
+          <span class='score'>{{song.title}}</span>
+      <span class='title'>
+        <a ng-href='{{song.title}}' target='_blank'>{{song.title}}</a>
+      </span>
+          <div style='clear: both;'></div>
+        </div>
+        <!--<div ng-show='reddit.busy'>Loading data...</div>-->
+      </div>
+      <!--
       <ul class="nav nav-tabs nav-stacked col-md-4 col-lg-4 col-sm-6" ng-repeat="song in songList">
         <li><a href="#" tooltip="{{song.info}}">{{song.name}}<button type="button" class="close" ng-click="deleteSong(song)">&times;</button></a></li>
       </ul>
+      -->
     </div>
   </div>
 
@@ -29,10 +41,10 @@
 
 <footer class="footer">
   <div class="container">
-      <!--
-      <p>Angular Fullstack v2.0.13 |
-        <a href="https://twitter.com/tyhenkel">@tyhenkel</a> |
-         <a href="https://github.com/DaftMonk/generator-angular-fullstack/issues?state=open">Issues</a></p>
-      -->
+    <!--
+    <p>Angular Fullstack v2.0.13 |
+      <a href="https://twitter.com/tyhenkel">@tyhenkel</a> |
+       <a href="https://github.com/DaftMonk/generator-angular-fullstack/issues?state=open">Issues</a></p>
+    -->
   </div>
 </footer>
