--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -14,7 +14,7 @@
 
   <div class="row">
     <div class="col-lg-12">
-      <youtube-video video-id="currentSong"></youtube-video>
+      <youtube-video video-id="playList.currentSong().url.youtubeid"></youtube-video>
     </div>
   </div>
 
