Improving the playlist model.

--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -22,7 +22,7 @@
     <div class="col-lg-12">
       <h1 class="page-header">Currently Playing</h1>
       <div>
-        <a href="#" tooltip="{{ playList.currentSong().title}}" ng-click="voteFor(playList.currentSong())">{{ playList.currentSong().artist }} - {{ playList.currentSong().title }} Current Votes: {{ playList.currentSong().votes.current }}, Total Votes: {{ playList.currentSong().votes.total }}, inPlaylist: {{ playList.currentSong().inPlaylist }}</a>
+        <a href="#" tooltip="{{ playList.currentSong()}}" ng-click="voteFor(playList.currentSong())">{{ playList.currentSong().artist }} - {{ playList.currentSong() }} Current Votes: {{ playList.currentSong().votes.current }}, Total Votes: {{ playList.currentSong().votes.total }}, inPlaylist: {{ playList.currentSong().inPlaylist }}</a>
       </div>
     </div>
   </div>
@@ -33,7 +33,7 @@
       <div>
 
         <ul class="nav nav-tabs nav-stacked col-md-12 col-lg-12 col-sm-12" ng-repeat="song in playList | orderBy: '-votes.current'">
-          <li><a href="#" tooltip="{{song.title}}" ng-click="voteFor(song)">{{ song.artist }} - {{ song.title }} Current Votes: {{ song.votes.current }}, Total Votes: {{ song.votes.total }}, inPlaylist: {{ song.inPlaylist }}</a></li>
+          <li><a href="#" tooltip="{{ song.title }}" ng-click="voteFor(song)">{{ song.artist }} - {{ song.title }} Current Votes: {{ song.votes.current }}, Total Votes: {{ song.votes.total }}, inPlaylist: {{ song.inPlaylist }}</a></li>
         </ul>
 
       </div>
@@ -48,7 +48,7 @@
       <div infinite-scroll='songList.loadMore()' infinite-scroll-distance='1'>
 
         <ul class="nav nav-tabs nav-stacked col-md-12 col-lg-12 col-sm-12" ng-repeat="song in songList.list | orderBy: '-votes'">
-          <li><a href="#" tooltip="{{song}}" ng-click="voteFor(song)">{{ song.artist }} - {{ song.title }} Current Votes: {{ song.votes.current }}, Total Votes: {{ song.votes.total }}, inPlaylist: {{ song.inPlaylist }}</a></li>
+          <li><a href="#" tooltip="{{song.title}}" ng-click="voteFor(song)">{{ song.artist }} - {{ song.title }} Current Votes: {{ song.votes.current }}, Total Votes: {{ song.votes.total }}, inPlaylist: {{ song.inPlaylist }}</a></li>
         </ul>
 
       </div>
