--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -14,7 +14,7 @@
 
   <div class="row">
     <div class="col-lg-12">
-      <youtube-video video-id="playList.currentSong().url.youtubeid"></youtube-video>
+      <youtube-video video-id="currentSong._song.url.youtubeid"></youtube-video>
     </div>
   </div>
 
@@ -22,8 +22,7 @@
     <div class="col-lg-12">
       <h1 class="page-header">Currently Playing</h1>
       <div>
-        <a href="#" tooltip="{{ playList.currentSong()}}" ng-click="voteFor(playList.currentSong())">{{ playList.currentSong().artist }} - {{ playList.currentSong() }} Current Votes: {{ playList.currentSong().votes.current }}, Total Votes: {{ playList.currentSong().votes.total }}, inPlaylist: {{ playList.currentSong().inPlaylist }}</a>
-      </div>
+        <a href="#" tooltip="{{ currentSong._song.title }}">{{ currentSong.position}}: {{ currentSong._song.artist }} - {{ currentSong._song.title }} Current Votes: {{ currentSong.votes }}, Total Votes: {{ currentSong._song.votes }}</a> </div>
     </div>
   </div>
 
@@ -32,8 +31,8 @@
       <h1 class="page-header">Playlist</h1>
       <div>
 
-        <ul class="nav nav-tabs nav-stacked col-md-12 col-lg-12 col-sm-12" ng-repeat="song in playList | orderBy: '-votes.current'">
-          <li><a href="#" tooltip="{{ song.title }}" ng-click="voteFor(song)">{{ song.artist }} - {{ song.title }} Current Votes: {{ song.votes.current }}, Total Votes: {{ song.votes.total }}, inPlaylist: {{ song.inPlaylist }}</a></li>
+        <ul class="nav nav-tabs nav-stacked col-md-12 col-lg-12 col-sm-12" ng-repeat="track in playList | orderBy: '-votes'">
+          <li><a href="#" tooltip="{{ track._song.title }}" ng-click="voteFor(track._song)">{{ track.position }}: {{ track._song.artist }} - {{ track._song.title }} Current Votes: {{ track.votes }}, Total Votes: {{ track._song.votes.total }}</a></li>
         </ul>
 
       </div>
@@ -47,7 +46,7 @@
       <h1 class="page-header">Song Catalog</h1>
       <div infinite-scroll='songList.loadMore()' infinite-scroll-distance='1'>
 
-        <ul class="nav nav-tabs nav-stacked col-md-12 col-lg-12 col-sm-12" ng-repeat="song in songList.list | orderBy: '-votes'">
+        <ul class="nav nav-tabs nav-stacked col-md-12 col-lg-12 col-sm-12" ng-repeat="song in catalog | orderBy: '-votes'">
           <li><a href="#" tooltip="{{song.title}}" ng-click="voteFor(song)">{{ song.artist }} - {{ song.title }} Current Votes: {{ song.votes.current }}, Total Votes: {{ song.votes.total }}, inPlaylist: {{ song.inPlaylist }}</a></li>
         </ul>
 
