--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -22,7 +22,18 @@
     <div class="col-lg-12">
       <h1 class="page-header">Currently Playing</h1>
       <div>
-        <a href="#" tooltip="{{ currentSong._song.title }}">{{ currentSong.position}}: {{ currentSong._song.artist }} - {{ currentSong._song.title }} Current Votes: {{ currentSong.votes }}, Total Votes: {{ currentSong._song.votes }}</a> </div>
+        <a href="#" tooltip="{{ currentSong._song.title }}">{{ currentSong.position}}: {{ currentSong._song.artist }} - {{ currentSong._song.title }} Current Votes: {{ currentSong.votes }}, Total Votes: {{ currentSong._song.votes }}, Played: {{ currentSong.played }}</a> </div>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-lg-12">
+      <h1 class="page-header">Playlist Log</h1>
+      <div>
+        <ul class="nav nav-tabs nav-stacked col-md-12 col-lg-12 col-sm-12" ng-repeat="track in playLog | orderBy: 'position'">
+          <li><a href="#" tooltip="{{ track._song.title }}" ng-click="voteFor(track._song)">{{ track.position }}: {{ track._song.artist }} - {{ track._song.title }} Current Votes: {{ track.votes }}, Total Votes: {{ track._song.votes.total }}, Played: {{ track.played }}</a></li>
+        </ul>
+      </div>
     </div>
   </div>
 
@@ -30,14 +41,10 @@
     <div class="col-lg-12">
       <h1 class="page-header">Playlist</h1>
       <div>
-
-        <ul class="nav nav-tabs nav-stacked col-md-12 col-lg-12 col-sm-12" ng-repeat="track in playList | orderBy: '-votes'">
-          <li><a href="#" tooltip="{{ track._song.title }}" ng-click="voteFor(track._song)">{{ track.position }}: {{ track._song.artist }} - {{ track._song.title }} Current Votes: {{ track.votes }}, Total Votes: {{ track._song.votes.total }}</a></li>
+        <ul class="nav nav-tabs nav-stacked col-md-12 col-lg-12 col-sm-12" ng-repeat="track in playList | orderBy: 'position'">
+          <li><a href="#" tooltip="{{ track._song.title }}" ng-click="voteFor(track._song)">{{ track.position }}: {{ track._song.artist }} - {{ track._song.title }} Current Votes: {{ track.votes }}, Total Votes: {{ track._song.votes.total }}, Played: {{ track.played }}</a></li>
         </ul>
-
       </div>
-
-
     </div>
   </div>
 
@@ -45,14 +52,10 @@
     <div class="col-lg-12">
       <h1 class="page-header">Song Catalog</h1>
       <div infinite-scroll='songList.loadMore()' infinite-scroll-distance='1'>
-
         <ul class="nav nav-tabs nav-stacked col-md-12 col-lg-12 col-sm-12" ng-repeat="song in catalog | orderBy: '-votes'">
-          <li><a href="#" tooltip="{{song.title}}" ng-click="voteFor(song)">{{ song.artist }} - {{ song.title }} Current Votes: {{ song.votes.current }}, Total Votes: {{ song.votes.total }}, inPlaylist: {{ song.inPlaylist }}</a></li>
+          <li><a href="#" tooltip="{{song.title}}" ng-click="voteFor(song)">{{ song.artist }} - {{ song.title }} Current Votes: {{ song.votes.current }}, Total Votes: {{ song.votes.total }}</a></li>
         </ul>
-
       </div>
-
-
     </div>
   </div>
 
