--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -5,10 +5,14 @@
   <form class="thing-form">
     <label>Add a new song to the playlist</label>
     <p class="input-group">
-      <input type="text" class="form-control" placeholder="Add a new song here." ng-model="newSong">
+
+    <h4>Asynchronous results</h4>
+    <input type="text" ng-model="asyncSelected" placeholder="Add a new song from Youtube here." typeahead="address for address in getLocation($viewValue)" typeahead-loading="loadingLocations" class="form-control">
+    <i ng-show="loadingLocations" class="glyphicon glyphicon-refresh"></i>
+
       <span class="input-group-btn">
-        <button type="submit" class="btn btn-primary" ng-click="addSong()">Add New</button>
-      </span>
+          <button type="submit" class="btn btn-primary" ng-click="addSong()">Add New</button>
+        </span>
     </p>
   </form>
 
@@ -40,6 +44,7 @@
   <div class="row">
     <div class="col-lg-12">
       <h1 class="page-header">Playlist</h1>
+
       <div>
         <ul class="nav nav-tabs nav-stacked col-md-12 col-lg-12 col-sm-12" ng-repeat="track in playList | orderBy: '-votes'">
           <li><a href="#" tooltip="{{ track._song.title }}" ng-click="voteFor(track._song)">{{ track._song.artist }} - {{ track._song.title }} Current Votes: {{ track.votes }}, Total Votes: {{ track._song.votes }}</a></li>
