Basic chat working.

--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -67,6 +67,28 @@
     </div>
   </div>
 
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-12">
+        <h1 class="page-header">Chats:</h1>
+        <ul class="nav nav-tabs nav-stacked col-md-4 col-lg-4 col-sm-6" ng-repeat="chat in chats">
+          <li><a href="#" tooltip="{{chat.date}}">{{chat.body}}</a></li>
+        </ul>
+      </div>
+    </div>
+    <div class="row">
+      <form class="chat-form">
+        <label>Chat</label>
+        <p class="input-group">
+          <input type="text" class="form-control" placeholder="Chat here" ng-model="newChat">
+      <span class="input-group-btn">
+        <button type="submit" class="btn btn-primary" ng-click="addChat()">Submit</button>
+      </span>
+        </p>
+      </form>
+    </div>
+  </div>
+
 </div>
 
 <footer class="footer">
