Changing the youtube player to play in the background.

--- a/client/index.html
+++ b/client/index.html
@@ -29,12 +29,14 @@
   <!-- endbuild -->
 </head>
 <body ng-app="beatschApp">
+<!-- Add your site or application content here -->
+<div ui-view=""></div>
+
+
 <!--[if lt IE 7]>
 <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
 <![endif]-->
 
-<!-- Add your site or application content here -->
-<div ui-view=""></div>
 
 <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
 <script>
@@ -87,5 +89,6 @@
 <script src="components/socket/socket.service.js"></script>
 <!-- endinjector -->
 <!-- endbuild -->
+<script src="bower_components/jquery.mb.ytplayer/inc/jquery.mb.YTPlayer.js"></script>
 </body>
 </html>
