--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -1,7 +1,29 @@
+<!--
+<a id="bgndVideo" class="player"
+   data-property="">My video</a>
+-->
+
+<div style="position: fixed; z-index: -99; width: 100%; height: 100%">
+  <youtube-video player-width="'100%'" player-height="'100%'" video-id="currentSong._song.videoId" player-vars="playerVars"></youtube-video>
+</div>
+
 <div ng-include="'components/navbar/navbar.html'"></div>
 
 <div class="container">
 
+  <!--<beatsch-player></beatsch-player>-->
+  <!--<a id="bgndVideo" class="player" >My video</a>-->
+ <!-- <a id="bgndVideo" class="bgndPlayer" data-property="{videoURL:'http://youtu.be/BsekcY04xvQ',containment:'body',autoPlay:true, mute:true, startAt:0, opacity:1}">My video</a>
+-->
+
+
+  <!--
+  <div class="row">
+    <div class="col-lg-12">
+
+    </div>
+  </div>
+  -->
   <form class="thing-form">
     <p class="input-group">
 
@@ -14,12 +36,6 @@
         </span>
     </p>
   </form>
-
-  <div class="row">
-    <div class="col-lg-12">
-      <youtube-video video-id="currentSong._song.videoId"></youtube-video>
-    </div>
-  </div>
 
   <div class="row">
     <div class="col-lg-12">
