--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -2,11 +2,11 @@
 <a id="bgndVideo" class="player"
    data-property="">My video</a>
 -->
-
+<!--
 <div style="position: fixed; z-index: -99; width: 100%; height: 100%">
   <youtube-video player-width="'100%'" player-height="'100%'" video-id="currentSong._song.videoId" player-vars="playerVars"></youtube-video>
 </div>
-
+-->
 <div ng-include="'components/navbar/navbar.html'"></div>
 
 <div class="container">
@@ -17,13 +17,13 @@
 -->
 
 
-  <!--
+
   <div class="row">
     <div class="col-lg-12">
-
+<youtube-video player-width="'480'" player-height="'320'" video-id="currentSong._song.videoId" player-vars="playerVars"></youtube-video>
     </div>
   </div>
-  -->
+
   <form class="thing-form">
     <p class="input-group">
 
