Added playlist image scroll.

--- a/client/index.html
+++ b/client/index.html
@@ -89,6 +89,10 @@
 <script src="components/socket/socket.service.js"></script>
 <!-- endinjector -->
 <!-- endbuild -->
+<!--
 <script src="bower_components/jquery.mb.ytplayer/inc/jquery.mb.YTPlayer.js"></script>
+-->
+<script src="assets/thumbnail-scroller/jquery.mThumbnailScroller.min.js"></script>
+<link rel="stylesheet" href="assets/thumbnail-scroller/jquery.mThumbnailScroller.css">
 </body>
 </html>
