--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -22,6 +22,12 @@
     <div class="col-lg-12">
 <youtube-video player-width="'480'" player-height="'320'" video-id="currentSong._song.videoId" player-vars="playerVars"></youtube-video>
     </div>
+
+    <div id="my-thumbs-list">
+      <ul ng-repeat="track in playLog | orderBy: 'date'">
+        <li><a href="#"><img src="{{ track._song.thumbnailUrlHigh }}" /></a></li>
+      </ul>
+    </div>
   </div>
 
   <form class="thing-form">
